welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:37: error: expected class or object definition
def memo() : Array[Color] =  {
^Array2:50: error: Unmatched closing brace '}' ignored here
}
^